// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearable 1`] = `
<div class="van-cell van-field">
  <!---->
  <!---->
  <div class="van-cell__value van-cell__value--alone">
    <div class="van-field__body"><input type="text" class="van-field__control">
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`clearable 2`] = `
<div class="van-cell van-field">
  <!---->
  <!---->
  <div class="van-cell__value van-cell__value--alone">
    <div class="van-field__body"><input type="text" class="van-field__control"> <i class="van-icon van-icon-clear van-field__clear">
        <!---->
        <!----></i>
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`render textarea 1`] = `
<div class="van-cell van-field">
  <!---->
  <!---->
  <div class="van-cell__value van-cell__value--alone">
    <div class="van-field__body"><textarea class="van-field__control" style="height: auto;"></textarea>
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <!---->
</div>
`;
